# Learning_with_codex

./: .gitignore  AGENTS.md  README.md
.agents/skills/cmake-coach/: SKILL.md
.agents/skills/cmake-coach/references/: cmake-syntax-teaching.md
.agents/skills/learning-coach/: SKILL.md
exercises/p0-hello/: CMakeLists.txt
exercises/p0-hello/app/: CMakeLists.txt
exercises/p0-hello/cmake/: HelloOptions.cmake
exercises/p0-hello/src/: CMakeLists.txt
learning/: README.md  log.md  profile.md  roadmap.md
learning/_templates/: log.md  profile.md  roadmap.md
skills/: README.md
skills/cmake-coach/: SKILL.md
skills/cmake-coach/agents/: openai.yaml
skills/cmake-coach/references/: cmake-track.md
skills/learning-coach/: SKILL.md
skills/learning-coach/agents/: openai.yaml
skills/learning-coach/references/: cmake-track.md
topics/: README.md
topics/cmake/: AGENTS.md  README.md
topics/cmake/exercises/p0-hello/: CMakeLists.txt  CMakePresets.json
topics/cmake/exercises/p0-hello/app/: CMakeLists.txt  main.cpp
topics/cmake/exercises/p0-hello/include/greeting/: greeting.h  text.h
topics/cmake/exercises/p0-hello/src/: CMakeLists.txt  greeting.cpp
topics/cmake/learning/: log.md  roadmap.md
